[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clinical_triage_env"
version = "0.1.0"
description = "Clinical triage agent environment"
authors = [{name = "your-hf-username"}]
dependencies = [
    "openenv-core>=0.2.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.6.0",
    "openai>=1.30.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0"
]

[project.scripts]
server = "server.app:main"
