[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clinical_triage_env"
version = "0.1.5"
description = "OpenEnv clinical triage environment"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "openenv-core>=0.2.3",
  "fastapi>=0.110.0",
  "uvicorn[standard]>=0.29.0",
  "pydantic>=2.6.0",
  "openai>=1.30.0",
  "python-dotenv>=1.0.0",
  "httpx>=0.27.0",
]

[project.scripts]
server = "clinical_triage_env.server.app:main"

[tool.setuptools.packages.find]
include = ["clinical_triage_env*"]
